Build 3 more sections
here, i have build the bottom-menu, the cabaz-menu, and abou-us sections.
For all of this sections i created a stylesheet file for each one.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
     <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet/navAndSearch.css">
+    <link rel="stylesheet" href="stylesheet/styleAboutUs.css">
+    <link rel="stylesheet" href="stylesheet/cabaz.css">
+    <link rel="stylesheet" href="stylesheet/bottomMenu.css">
+
+
+
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="script.js" defer></script>
@@ -57,6 +63,66 @@
             </button>
         </div> 
 
+        <section class="bottom-menu">
+            <div class="home"><i class="fa-solid fa-house"></i></div>
+            <div class="info"><i class="fa-solid fa-info"></i></div>
+            <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
+            <div class="login"><i class="fa-solid fa-user"></i></div>
+        </section>
 
+        <!-- ABOUT US SECTION -->
+
+        <section class="about-us">
+
+            <div>
+                <h1 class="about-us-title">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
+            </div>
+
+            <div class="about-us-div">
+                <div class="about-us-photo">
+                    <img src="images/farmView.jpeg" alt="">
+                </div>
+                <div class="about-us-description">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- CABAZES -->
+
+
+        <section class="cabazes">
+
+            <div class="cabazes-title">
+                <h1>Os nossos <span class="hortaDaRia">Cabazes</span></h1>
+            </div>
+
+            <div class="cabaz-menu">
+                <div class="cabaz-1 photo-div-cabaz">
+                    <a href="">
+                        <img src="images/cabaz-photo.jpeg" alt="">
+                    </a>
+                </div>
+                <div class="cabaz-2 photo-div-cabaz">
+                    <a href="">
+                        <img src="images/cabaz-photo.jpeg" alt="">
+                    </a>
+                </div>
+                <div class="cabaz-3 photo-div-cabaz">
+                    <a href="">
+                        <img src="images/cabaz-photo.jpeg" alt="">
+                    </a>
+                </div>
+                <div class="cabaz-4 photo-div-cabaz">
+                    <a href="">
+                        <img src="images/cabaz-photo.jpeg" alt="">
+                    </a>
+                </div>
+            </div>
+
+        </section>
 </body>
 </html>
