Create the structure of build-cabaz

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="stylesheet/cabaz.css">
     <link rel="stylesheet" href="stylesheet/bottomMenu.css">
+    <link rel="stylesheet" href="stylesheet/productsList.css">
 
 
 
@@ -75,7 +76,7 @@
         <section class="about-us">
 
             <div>
-                <h1 class="about-us-title">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
+                <h1 class="title-div">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
             </div>
 
             <div class="about-us-div">
@@ -96,7 +97,7 @@
 
         <section class="cabazes">
 
-            <div class="cabazes-title">
+            <div class="title-div">
                 <h1>Os nossos <span class="hortaDaRia">Cabazes</span></h1>
             </div>
 
@@ -121,6 +122,86 @@
                         <img src="images/cabaz-photo.jpeg" alt="">
                     </a>
                 </div>
+            </div>
+
+        </section>
+
+<!-- lista de produtos para criar cabaz -->
+
+        <section class="all-products">
+
+            <div class="title-div">
+                <h1>Cria o teu <span class="hortaDaRia">Cabaz</span></h1>
+            </div>
+
+            <div class="ervas-cha photo-div-product" >
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Ervas e Chá</p>
+                </a>
+            </div>
+
+            <div class="saladas photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Saladas</p>
+                </a>
+            </div>
+
+            <div class="verduras-folhas photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Verduras e Folhas</p>
+                </a>
+            </div>
+
+            <div class="ovos-sabao photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Ovos e Sabão</p>
+                </a>
+            </div>
+
+            <div class="raizes photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Raízes</p>
+                </a>
+            </div>
+
+            <div class="microverdes-germinados photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                <p>Microverdes e Germinados</p>
+                </a>
+            </div>
+
+            <div class="vasos-plantas photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Vasos e Plantas</p>
+                </a>
+            </div>
+
+            <div class="flores-comestiveis photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Flores Comestiveis</p>
+                </a>
+            </div>
+
+            <div class="leguminosas photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Leguminosas</p>
+                </a>
+            </div>
+
+            <div class="horticolas-frio photo-div-product">
+                <a href="">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Horticolas de Frio</p>
+                </a>
             </div>
 
         </section>
