--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <i class="fa-solid fa-bars-staggered"></i>
-                <i class="fa-solid fa-x"></i>
+                <!-- <i class="fa-solid fa-x"></i> -->
             </div>
         </nav>
 
