changed style to laptop and tablet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-
+            <!-- NAVBAR -->
     <header>
 
         <nav class="navbar" id="navBar">
@@ -76,8 +76,8 @@
 
         <section class="about-us">
 
-            <div>
-                <h1 class="title-div">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
+            <div class="title-div">
+                <h1 class="welcome">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
             </div>
 
             <div class="about-us-div">
