updet style and add json
the json doc separate all th diferents categories and names of items

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
         <footer>
             <a href="mailto:simaaoweb@gmail.com">
-                <p class="my-name">simaoPedro</p>
+                <p class="my-name">SP</p>
             </a>
         </footer>
 </body>
