create ervas and chas
created css, js and html docs to ervas and chas

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="ervas-cha photo-div-product" >
-                <a href="">
+                <a href="html/ervasECha.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Ervas e Chá</p>
                 </a>
@@ -252,7 +252,7 @@
 
         <footer>
             <a href="mailto:simaaoweb@gmail.com">
-                <p class="my-name">SP</p>
+                <p class="my-name"><span class="designBy">Design by </span>SP</p>
             </a>
         </footer>
 </body>
