add content to cabazes
add Style to cabazes;
update style of contacts;
add js to cabazes

--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -29,7 +29,9 @@
 
         <nav class="navbar" id="navBar">
             <div class="logo-img-div">
-                <img src="/images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
+                <a href="/index.html" rel="noopener noreferrer">
+                    <img src="/images/logo.png" class="logo-img" alt="Logotipo - Horta d'Ria - Agricultura Natural - cor verde">
+                </a>    
             </div>
             
             <div class="cart-and-menu">
@@ -46,7 +48,7 @@
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
-            <li> <a href="#">Quem Somos</a>  </li>  
+            <li> <a href="\html\aboutUs.html">Quem Somos</a>  </li>  
             <li> <a href="#cabazesMenu">Criar Cabaz</a> </li>
             <li> <a href="#productsList">Produtos</a>    </li>
             <li> <a href="#contactsAndSocialMedia">Contactos</a>   </li>
