--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
-            <li> <a href="#">Quem Somos</a>  </li>  
+            <li> <a href="\html\aboutUs.html">Quem Somos</a>  </li>  
             <li> <a href="#cabazesMenu">Criar Cabaz</a> </li>
             <li> <a href="#productsList">Produtos</a>    </li>
             <li> <a href="#contactsAndSocialMedia">Contactos</a>   </li>
@@ -60,37 +60,16 @@
 
     </header>
         <!-- search bar -->
-        <div class="searchBar-div">
+        <!-- <div class="searchBar-div">
             <input type="search" class="searchBarInput">
                 <i class="fa-solid fa-magnifying-glass"></i>
-        </div> 
+        </div>  -->
         <!-- BOTTOM MENU BAR -->
         <section class="bottom-menu">
             <div class="home"><i class="fa-solid fa-house"></i></div>
             <div class="info"><i class="fa-solid fa-info"></i></div>
             <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
-        </section>
-
-        <!-- ABOUT US SECTION -->
-
-        <section class="about-us">
-
-            <div class="title-div">
-                <h1 class="welcome">Benvindo à <br><span class="hortaDaRia">Horta d'Ria</span></h1>
-            </div>
-
-            <div class="about-us-div">
-                <div class="about-us-photo">
-                    <img src="images/farmView.jpeg" alt="">
-                </div>
-                <div class="about-us-description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum laboriosam expedita beatae at eos odio iusto tenetur iste sed aperiam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A autem assumenda similique ex. Sed, dignissimos?</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas quos nihil voluptas.</p>
-                </div>
-            </div>
-
         </section>
 
         <!-- CABAZES -->
@@ -103,19 +82,23 @@
             </div>
 
             <div class="cabaz-menu">
+
                 <div class="cabaz-1 photo-div-cabaz">
                     <a href="">
                         <img src="images/cabaz-photo.jpeg" alt="">
+                        <div class="cabazOne"></div>
                     </a>
                 </div>
                 <div class="cabaz-2 photo-div-cabaz">
                     <a href="">
                         <img src="images/cabaz-photo.jpeg" alt="">
+                        <div class="cabazTwo"></div>
                     </a>
                 </div>
                 <div class="cabaz-3 photo-div-cabaz">
                     <a href="">
                         <img src="images/cabaz-photo.jpeg" alt="">
+                        <div class="cabazThree"></div>
                     </a>
                 </div>
                 <div class="cabaz-4 photo-div-cabaz">
@@ -123,6 +106,7 @@
                         <img src="images/cabaz-photo.jpeg" alt="">
                     </a>
                 </div>
+                
             </div>
 
         </section>
@@ -213,17 +197,17 @@
                     <h3>Contactos</h3>
                 </div>
 
+                <div class="contact">
+                    <i class="fa-solid fa-phone"></i>
+                    <p class="contact-number">+ 351 914 547 465</p>
+                    <span class="call-cost">Custo chamada nacional</span>
+                </div>
+
                 <div class="location">
                     <i class="fa-solid fa-map-location-dot"></i>
                     <a href="" target="_blank">
                         <p class="location-name">V. N. Famalicão</p>
                     </a>    
-                </div>
-
-                <div class="contact">
-                    <i class="fa-solid fa-phone"></i>
-                    <p class="contact-number">+ 351 914 547 465</p>
-                    <span class="call-cost">Custo chamada nacional</span>
                 </div>
 
                 <div class="mail">
@@ -245,7 +229,7 @@
                     </a>
                     <p>horta.da.ria</p>
                 </div>
-                </div>
+            
 
 
         </section>
