Add a constact form page and change some style
i've been change a display of the productsList.
I created a new Page called form.html whrw the client can ask questions to the elements of Horta da Ria.

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
-            <li> <a href="\html\aboutUs.html">Quem Somos</a>  </li>  
+            <li> <a href="\html/aboutUs.html">Quem Somos</a>  </li>  
             <li> <a href="#cabazesMenu">Criar Cabaz</a> </li>
             <li> <a href="#productsList">Produtos</a>    </li>
-            <li> <a href="#contactsAndSocialMedia">Contactos</a>   </li>
+            <li> <a href="\html/form.html">Contactos</a>   </li>
             <li> <a href="#">Testemunhos</a> </li>
             <li> <a href="#">Fotos</a>       </li>
             <li> <a href="#">Videos</a>      </li>
@@ -106,7 +106,7 @@
                         <img src="images/cabaz-photo.jpeg" alt="">
                     </a>
                 </div>
-                
+
             </div>
 
         </section>
