--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -48,10 +48,10 @@
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
-            <li> <a href="\html\aboutUs.html">Quem Somos</a>  </li>  
+            <li> <a href="\html/aboutUs.html">Quem Somos</a>  </li>  
             <li> <a href="#cabazesMenu">Criar Cabaz</a> </li>
             <li> <a href="#productsList">Produtos</a>    </li>
-            <li> <a href="#contactsAndSocialMedia">Contactos</a>   </li>
+            <li> <a href="\html/form.html">Contactos</a>   </li>
             <li> <a href="#">Testemunhos</a> </li>
             <li> <a href="#">Fotos</a>       </li>
             <li> <a href="#">Videos</a>      </li>
