--- a/html/ervasECha.html
+++ b/html/ervasECha.html
@@ -79,7 +79,11 @@
 
          <!-- BOTTOM MENU BAR -->
          <section class="bottom-menu">
-            <div class="home"><i class="fa-solid fa-house"></i></div>
+            <div class="home">
+                <a href="\index.html">
+                    <i class="fa-solid fa-house"></i>
+                </a>
+            </div>
             <div class="info"><i class="fa-solid fa-info"></i></div>
             <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
