add js and html docs for each type of item
create, for each itype of item one html doc and one js doc, all of them share the same stylesheet.

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Simão Alves">
     <meta name="description" content="Produtos 100% Naturais - Horta da Ria - V. N. Famalicão">
     <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
-    <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
+    <link rel="stylesheet" href="\stylesheet/navAndSearch.css">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
