--- a/html/verduras.html
+++ b/html/verduras.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
+    <meta name="description" content="Verduras | Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
     <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script src="/scriptDocs/ervasECha.js" defer></script>
+    <script src="/scriptDocs/verduras.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="/script.js" defer></script>
 
 
-    <title>Ervas e Chá - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
+    <title>Verduras - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
 </head>
 <body>
     
@@ -73,7 +73,7 @@
     </section>
 
     <!-- watch js document -->
-    <section class="ervas"></section>
+    <section class="verduras"></section>
 
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
