--- a/index.html
+++ b/index.html
@@ -131,65 +131,72 @@
             </div>
 
             <div class="saladas photo-div-product">
-                <a href="">
+                <a href="html/saladas.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Saladas</p>
                 </a>
             </div>
 
             <div class="verduras-folhas photo-div-product">
-                <a href="">
+                <a href="html/verduras.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Verduras</p>
                 </a>
             </div>
 
             <div class="ovos-sabao photo-div-product">
-                <a href="">
+                <a href="html/ovos.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Ovos</p>
                 </a>
             </div>
 
             <div class="raizes photo-div-product">
-                <a href="">
+                <a href="html/raizes.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Raízes</p>
                 </a>
             </div>
 
             <div class="microverdes-germinados photo-div-product">
-                <a href="">
+                <a href="html/microverdes.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                 <p>Microverdes</p>
                 </a>
             </div>
 
             <div class="vasos-plantas photo-div-product">
-                <a href="">
+                <a href="html/plantasEmVaso.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Plantas</p>
                 </a>
             </div>
 
             <div class="flores-comestiveis photo-div-product">
-                <a href="">
+                <a href="html/floresComestiveis.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
-                    <p>Horticolas</p>
+                    <p>Flores Comestiveis</p>
                 </a>
             </div>
 
             <div class="leguminosas photo-div-product">
-                <a href="">
+                <a href="html/leguminosas.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
                     <p>Leguminosas</p>
                 </a>
             </div>
 
             <div class="horticolas-frio photo-div-product">
-                <a href="">
+                <a href="html/horticulas.html">
                     <img src="images/cabaz-photo.jpeg" alt="">
-                    <p>Flores Comestiveis</p>
+                    <p>Horticolas</p>
+                </a>
+            </div>
+
+            <div class="sabao-Natural photo-div-product">
+                <a href="html/sabaoNatural.html">
+                    <img src="images/cabaz-photo.jpeg" alt="">
+                    <p>Sabão Natural</p>
                 </a>
             </div>
 
