created html files and js files
Today i´ve created all the files for each cabaz and product.
Now they have the <a> element with the respective link.
Start created some html files for cabazes numbers and the respective stylesheet

--- a/html/informations.html
+++ b/html/informations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Horticulas | Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
+    <meta name="description" content="Informações | Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
     <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -20,7 +20,7 @@
     <script src="/script.js" defer></script>
 
 
-    <title>Horticulas - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
+    <title>Informações - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
 </head>
 <body>
     
@@ -76,8 +76,6 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
-    <!-- watch js document -->
-    <section class="horticulas"></section>
 
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
