--- a/index.html
+++ b/index.html
@@ -88,26 +88,27 @@
             <div class="cabaz-menu">
 
                 <div class="cabaz-1 photo-div-cabaz">
-                    <a href="">
+                    <a href="/html/cabaz-um.html">
                         <img src="images/cabaz-photo.jpeg" alt="">
                         <div class="cabazOne"></div>
                     </a>
                 </div>
                 <div class="cabaz-2 photo-div-cabaz">
-                    <a href="">
+                    <a href="/html/cabaz-dois.html">
                         <img src="images/cabaz-photo.jpeg" alt="">
                         <div class="cabazTwo"></div>
                     </a>
                 </div>
                 <div class="cabaz-3 photo-div-cabaz">
-                    <a href="">
+                    <a href="/html/cabaz-tres.html">
                         <img src="images/cabaz-photo.jpeg" alt="">
                         <div class="cabazThree"></div>
                     </a>
                 </div>
                 <div class="cabaz-4 photo-div-cabaz">
-                    <a href="">
+                    <a href="/html/criar-cabaz.html">
                         <img src="images/cabaz-photo.jpeg" alt="">
+                        <div class="cabazFour"></div>
                     </a>
                 </div>
 
