--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -73,9 +73,15 @@
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
-            <div class="info"><i class="fa-solid fa-info"></i></div>
+
+            <div class="info">
+                <a href="/html/informations.html">
+                    <i class="fa-solid fa-info"></i>
+                </a>
+            </div>
             <div class="criar-cabaz"><i class="fa-solid fa-basket-shopping"></i></div>
             <div class="login"><i class="fa-solid fa-user"></i></div>
+        
         </section>
 
         <!-- ABOUT US SECTION -->
