--- a/html/cabaz-um.html
+++ b/html/cabaz-um.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Horticulas | Produtos 100% Naturais - Horta d´Ria - V. N. Famalicão">
+    <meta name="description" content="Cabaz nº 1 - Horta d´Ria - Produtos 100% Naturais - V. N. Famalicão">
     <meta name="keywords" content="Agricultura, Terra, Horta, cidade, aldeia, produtos, frescos, fruta, legumes, vegetais, horticolas, ecologia, ecológica, natural, famalicão, famalicao, vnf, agricultor, agricultora">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="/stylesheet/ervasECha.css">
     <link rel="stylesheet" href="/stylesheet/navAndSearch.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script src="/scriptDocs/horticulas.js" defer></script>
+    <script src="/scriptDocs/cabaz-um.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script src="/script.js" defer></script>
 
 
-    <title>Horticulas - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
+    <title>Cabaz nº 1 - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
 </head>
 <body>
     
@@ -76,9 +76,49 @@
         <div class="login"><i class="fa-solid fa-user"></i></div>
     </section>
 
-    <!-- watch js document -->
-    <section class="horticulas"></section>
+    <!-- Watch cabaz-um.js -->
+    <section class="cabaz-um">
 
+        <h2 class="cabaz-name-title">Cabaz nº 1</h2>
+
+        <div class="cabaz-content">
+            <!-- <h4>O Cabaz nº 1 é composto por:</h4> -->
+            <ul class="cabaz-list">
+                <li class="cabaz-item">Cenoura</li>
+                <li class="cabaz-item">Mini-Acelgas</li>
+                <li class="cabaz-item">Salada-Mix</li>
+                <li class="cabaz-item">Tangerinas</li>
+                <li class="cabaz-item">Microverdes</li>
+            </ul>
+            <img src="/images/cabaz-photo.jpeg" alt="">
+            <button type="button" class="add-to-cart">Adicionar ao Carrinho</button>
+        </div>
+
+        <div class="sugestions">
+            <h4 class="sugestionsTitle">Outras Sugestões:</h4>
+            <div class="sugestionsContent">
+                <div class="sugestionOne sugestion">
+                    <a href="/html/cabaz-dois.html">
+                        <img src="/images/cabaz-photo.jpeg" alt="">
+                        <span>Cabaz nº 1</span>
+                    </a>
+                </div>
+                <div class="sugestionTwo sugestion">
+                    <a href="/html/cabaz-tres.html">
+                        <img src="/images/cabaz-photo.jpeg" alt="">
+                        <span>Cabaz nº 2</span>
+                    </a>
+                </div>
+                <div class="sugestionThree sugestion">
+                    <a href="/html/criar-cabaz.html">
+                        <img src="/images/cabaz-photo.jpeg" alt="">
+                        <span>Criar Cabaz</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
 
