testing netlify forms

--- a/html/form.html
+++ b/html/form.html
@@ -86,8 +86,7 @@
 
 
     <!-- FORMULARIO DE CONTACTO -->
-    <form class="contactForm" action="https://formspree.io/f/mdoqdear" method="POST">
-
+    <form name="contact" method="POST" data-netlify="true" class="contactForm">
         <!-- <input type="hidden" name="_captcha" value="false"> -->
         <!-- <input type="hidden" name="_next" value="https://"> -->
         <input type="hidden" name="subject" value="" id="newMessage">
