testing netlify forms

--- a/html/form.html
+++ b/html/form.html
@@ -86,10 +86,10 @@
 
 
     <!-- FORMULARIO DE CONTACTO -->
-    <form name="contact" method="POST" data-netlify="true" class="contactForm">
+    <form name="contact" method="POST" data-netlify="true" class="contactForm" >
         <!-- <input type="hidden" name="_captcha" value="false"> -->
         <!-- <input type="hidden" name="_next" value="https://"> -->
-        <input type="hidden" name="subject" value="" id="newMessage">
+        <!-- <input type="hidden" name="subject" value="" id="newMessage"> -->
         <!-- <input type="hidden" name="_template" value="table"> -->
         <!-- <input type="hidden" name="_autoresponse" value="" id="autoResponseMessage"> -->
 
