--- a/html/form.html
+++ b/html/form.html
@@ -86,7 +86,7 @@
 
 
     <!-- FORMULARIO DE CONTACTO -->
-    <form name="Horta d'Ria" action="/html/success.html" method="POST" data-netlify="true" class="contactForm" >
+    <form name="Horta d'Ria" action="/html/success.html/success" method="POST" data-netlify="true" class="contactForm" >
         <!-- <input type="hidden" name="_captcha" value="false"> -->
         <!-- <input type="hidden" name="_next" value="https://"> -->
         <!-- <input type="hidden" name="subject" value="" id="newMessage"> -->
