update style and change footer

--- a/html/plantasEmVaso.html
+++ b/html/plantasEmVaso.html
@@ -48,13 +48,13 @@
 
         <ul class="menu-list">
             <!-- href.value = element.id.value -->
-            <li> <a href="\html/aboutUs.html">Quem Somos</a>  </li>  
-            <li> <a href="#cabazesMenu">Criar Cabaz</a> </li>
-            <li> <a href="\index.html">Produtos</a>    </li>
-            <li> <a href="\html/form.html">Contactos</a>   </li>
-            <li> <a href="#">Testemunhos</a> </li>
-            <li> <a href="#">Fotos</a>       </li>
-            <li> <a href="#">Videos</a>      </li>
+            <a href="/html/aboutUs.html"> <li>Quem Somos  </li>  </a>
+            <a href="#cabazesMenu"> <li>Criar Cabaz</li></a>
+            <a href="/html/produtos.html"> <li>Produtos</li></a>
+            <a href="/html/form.html"> <li>Contactos</li></a>
+            <a href="#"> <li>Testemunhos</li></a>
+            <a href="#"> <li>Fotos</li></a>
+            <a href="#Videos"><li>Videos</li></a>
         </ul>
 
     </header>
@@ -79,53 +79,6 @@
     <!-- watch js document -->
     <section class="plantasEmVaso"></section>
 
-
-    <section class="media-and-contacts" id="contactsAndSocialMedia">
-
-        <div class="contacts-title">
-            <h3>Contactos</h3>
-        </div>
-
-        <div class="location">
-            <i class="fa-solid fa-map-location-dot"></i>
-            <a href="" target="_blank">
-                <p class="location-name">V. N. Famalicão</p>
-            </a>    
-        </div>
-
-        <div class="contact">
-            <i class="fa-solid fa-phone"></i>
-            <p class="contact-number">+ 351 914 547 465</p>
-            <span class="call-cost">Custo chamada nacional</span>
-        </div>
-
-        <div class="mail">
-            <i class="fa-regular fa-envelope"></i>
-            <a href="mailto:hortadarianatural@gmail.com" target="_blank">
-                <p class="email">hortadarianatural@gmail.com</p>
-            </a>
-        </div>
-
-        <div class="social-media">
-            <a href="https://www.facebook.com/Tiago.Horta.da.Ria/" target="_blank">
-                <i class="fa-brands fa-facebook-f"></i>
-            </a>
-            <p>Tiago.Horta.da.Ria</p>
-        </div>
-        <div class="social-media">                    
-            <a href="https://www.instagram.com/horta.da.ria/" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <p>horta.da.ria</p>
-        </div>
-        </div>
-    </section>
-
-    <footer>
-        <a href="mailto:simaaoweb@gmail.com">
-            <p class="my-name"><span class="designBy">Design by </span>SP</p>
-        </a>
-    </footer>
 
 </body>
 </html>
